<resources>
    <string name="app_name">Story App</string>
    <string name="package_name">com.example.storyapp</string>
    <string name="input_email">Please input your email address</string>
    <string name="password_length">Password length must be six characters.</string>
    <string name="timeout_time">Timeout server!!please try later.</string>
    <string name="the_user_created">This account was  created account successfully</string>
    <string name="error_message">Error messages :</string>
    <string name="login_successfully">The user account login was successfully</string>
    <string name="this_account_unauthorized">This account user  is unauthorized</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choose_your_image_file">Select your file  want to upload story.</string>
    <string name="from_gallery">From Your gallery</string>
    <string name="take_a_picture">Take a new picture</string>
    <string name="cancel">Cancel</string>
    <string name="select_photo">Selected your a photo</string>
    <string name="error_loading">Failed to reload your data :</string>
    <string name="detail_name">Detail Name</string>
    <string name="detail_desc">User Description</string>
    <string name="detail_date">01/10/2022</string>
    <string name="name_is_empty">Please input your name</string>
    <string name="email_is_empty">Please Input your  email</string>
    <string name="password_is_empty">Please input your password</string>
    <string name="input_desc">Please  input your description</string>
    <string name="choose_picture">Choose your picture</string>
    <string name="input_picture">Please input your image file</string>
    <string name="message">Your message :</string>
    <string name="post_as">Post as your Story</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="see_password">see password</string>
    <string name="no_account">Do you do not have Account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="language">Language menu</string>
    <string name="check_logOut">Logout</string>
    <string name="tolls_password">123456</string>
    <string name="tolls_name">Muhammad Rizky</string>
    <string name="tolls_email">muhammadrizky102356@gmail.com</string>
    <string name="valid_email_address">Please input a valid email address</string>
    <string name="your_location">Your Location</string>
    <string name="icon_map_pin">location</string>
    <string name="click_place">Click this Location</string>
    <string name="click_on_map_to_pick_place">Click on map to pick place</string>
    <string name="use_default_location">use default location</string>
    <string name="ups_something_went_wrong">Oops something  was wrong now</string>
    <string name="no_have_location">You do not have location</string>
    <string name="location_name_unknown">This location Unknown</string>
    <string name="see_on_map">See the Map</string>
    <string name="upload_story">Upload Story</string>
    <string name="photo">photo user</string>
    <string name="no_have_location_data">No Have Location Data user</string>
    <string name="my_location_now">My Location Now</string>
    <string name="use_this_location_now">Use this your location now</string>
    <string name="cant_Styling_parsing_failed">Ca\'it Style to parsing failed</string>
    <string name="cant_use_this_style">Can\'it use this style. Error:</string>
    <string name="fetched_map_successfully">Stories fetched successfully</string>
    <string name="detail_title">Detail user story</string>
    <string name="email_is_already_use">This email is already User</string>
    <string name="information">Your information</string>
    <string name="continue_">Continue</string>
    <string name="email_already">This email already exist</string>
    <string name="upload_successfully">Your Upload story was successfully</string>
    <string name="reload_button">Reload Data</string>
    <string name="clicked_user_story">You are clicked this user story</string>
    <string name="this_is_your_location">This is yur location now</string>
    <string name="this_story_uploaded_by">This story uploaded as</string>
    <string name="clicked_default_map">click default map</string>
    <string name="clicked_Area_map">You are Clicked Area Map</string>
    <string name="clicked_satellite_map">You are clicked satellite map</string>
    <string name="select_location">"Input your location as: "</string>
    <string name="your_location_found">You are location was founded</string>
    <string name="description_user">description</string>
    <string name="you_not_have_location">You not location please choice your location</string>
    <string name="walcome_to_login_page">Welcome to Login Page</string>
    <string name="walcome_to_register_page">Welcome to Register Page</string>
</resources>