<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginUserActivity">

    <FrameLayout
        android:id="@+id/fl_header"
        style="@style/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/imageView"
            android:src="@drawable/background"
             />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title_login"
        style="@style/tvTitle"
        android:alpha="0"
        android:text="@string/login"
        android:textSize="@dimen/tv_title"
        tools:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/textView"
        android:alpha="0"
        android:layout_marginStart="@dimen/margin_form"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/email"
        tools:alpha="1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:alpha="0"
        android:layout_width="@dimen/width_form"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_form"
        android:layout_marginEnd="@dimen/margin_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        tools:alpha="1"
       >


        <com.example.storyapp.CustomView.CustomViewEmail
            android:id="@+id/ed_email_login"
            style="@style/customView"
            android:ems="10"
            tools:text="@string/tolls_email"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:alpha="0"
        style="@style/textView"
        android:layout_marginStart="@dimen/margin_form"
        android:layout_marginTop="@dimen/margin_top"
        tools:alpha="1"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:alpha="0"
        tools:alpha="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/width_form"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_form"
        android:layout_marginEnd="@dimen/margin_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <com.example.storyapp.CustomView.CustomViewPassword
            android:id="@+id/ed_password_login"
            style="@style/customView"
            android:ems="10"
            tools:text="@string/tolls_password"
            android:inputType="textPassword"
            tools:alpha="1"
            app:passwordToggleEnabled="true"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/cb_see_password"
        style="@style/checkBox"
        android:alpha="0"
        android:text="@string/see_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button"
        android:alpha="0"
        android:textSize="@dimen/text_size_form"
        android:textStyle="bold"
        android:text="@string/login"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_see_password"
        tools:alpha="1"/>

    <LinearLayout
        style="@style/linearLayoutForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <TextView
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:alpha="0"
            tools:alpha="1"
            android:text="@string/no_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:padding="5dp"
            android:text="@string/register"
            android:alpha="0"
            tools:alpha="1"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/loading_processing"
        style="@style/LoadingProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>