<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/customView">

        <TextView
            android:id="@+id/tv_name"
            style="@style/addTitleName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        style="@style/CardViewMap"
        android:background="@color/white"
        card_view:cardCornerRadius="8dp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="@id/tv_name">

        <fragment
            android:id="@+id/location"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="360dp"
            android:layout_height="match_parent"
            tools:context=".ui.MapsLocationActivity" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_default_location"
        style="@style/buttonLocation"
        android:background="@drawable/button_background"
        android:text="@string/clicked_default_map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/card_view" />

    <Button
        android:id="@+id/btn_clicked_place"
        style="@style/buttonLocation"
        android:background="@drawable/button_background"
        android:text="@string/click_place"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/btn_default_location" />

    <TextView
        style="@style/textView"
        android:layout_marginTop="10dp"
        android:text="@string/you_not_have_location"
        android:textColor="@color/black"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/btn_clicked_place" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
